chore: Update dev environment configuration and secure credentials
- Rename .cursor/rules/project.mdrules to project.mdc (proper extension)
- Update testing procedure for separated dev workspace
  - Remove references to ___dev/ directory (dev now on separate machine)
  - Make sync instructions generic (Syncthing, rsync, scp)
  - Remove hardcoded URLs and tokens from documentation
- Add .ha_config.example for secure local configuration
  - Store HA_URL and HA_TOKEN locally (gitignored)
  - Update restart commands to use .ha_config file
- Clean up documentation structure
  - Remove REORGANIZATION_SUMMARY.md (temporary file)
  - Update RELEASE_NOTES_v0.8.0.md with proper formatting
- Update .gitignore to exclude .ha_config file

This update adapts the project rules to the new development setup where
the dev workspace is on a separate machine from the HA server.

--- a/.gitignore
+++ b/.gitignore
@@ -137,10 +137,12 @@ Thumbs.db
 home-assistant.log
 home-assistant_v2.db
 
+# Local HA configuration (contains secrets)
+.ha_config
+
 # Release artifacts
 smart_appliance_monitor-*.zip
 
-RELEASE_NOTES_v*.md
 RELEASE_SUMMARY_v*.md
 
 # Frontend cards - npm dependencies and build artifacts
@@ -148,3 +150,4 @@ custom_components/smart_appliance_monitor/www/smart-appliance-cards/node_modules
 custom_components/smart_appliance_monitor/www/smart-appliance-cards/package-lock.json
 # But keep compiled dist files for distribution
 !custom_components/smart_appliance_monitor/www/smart-appliance-cards/dist/
+ha-smart_appliance_monitor.code-workspace
